fix: prevent word wrap in `pre` tags

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -24,6 +24,7 @@
         margin: 1.5em 0em;
         line-height: 1.4em;
         overflow-x: scroll;
+        word-wrap: normal;
     }
     
     h1, h2, h3, h4, h5, h6 {
